--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,81 +1,73 @@
 /* Webfont: NimbusRomNo9L-Reg */
 @font-face {
-  font-family: "NimbusRomNo9L";
-  src: url("../assets/Fonts/NimbusRomNo9L-Reg.eot"); /* IE9 Compat Modes */
-  src: url("../assets/Fonts/NimbusRomNo9L-Reg.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("../assets/Fonts/NimbusRomNo9L-Reg.woff") format("woff"),
-    /* Modern Browsers */ url("../assets/Fonts/NimbusRomNo9L-Reg.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("../assets/Fonts/NimbusRomNo9L-Reg.svg#NimbusRomNo9L-Reg")
-      format("svg"); /* Legacy iOS */
+  font-family: 'NimbusRomNo9L';
+  src: url('../assets/Fonts/NimbusRomNo9L-Reg.eot'); /* IE9 Compat Modes */
+  src: url('../assets/Fonts/NimbusRomNo9L-Reg.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('../assets/Fonts/NimbusRomNo9L-Reg.woff') format('woff'),
+    /* Modern Browsers */ url('../assets/Fonts/NimbusRomNo9L-Reg.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../assets/Fonts/NimbusRomNo9L-Reg.svg#NimbusRomNo9L-Reg') format('svg'); /* Legacy iOS */
   font-style: normal;
   font-weight: normal;
 }
 
 /* Webfont: NimbusRomNo9L-RegIta */
 @font-face {
-  font-family: "NimbusRomNo9L";
-  src: url("../assets/Fonts/NimbusRomNo9L-RegIta.eot"); /* IE9 Compat Modes */
-  src: url("../assets/Fonts/NimbusRomNo9L-RegIta.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("../assets/Fonts/NimbusRomNo9L-RegIta.woff")
-      format("woff"),
-    /* Modern Browsers */ url("../assets/Fonts/NimbusRomNo9L-RegIta.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("../assets/Fonts/NimbusRomNo9L-RegIta.svg#NimbusRomNo9L-RegIta")
-      format("svg"); /* Legacy iOS */
+  font-family: 'NimbusRomNo9L';
+  src: url('../assets/Fonts/NimbusRomNo9L-RegIta.eot'); /* IE9 Compat Modes */
+  src: url('../assets/Fonts/NimbusRomNo9L-RegIta.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('../assets/Fonts/NimbusRomNo9L-RegIta.woff') format('woff'),
+    /* Modern Browsers */ url('../assets/Fonts/NimbusRomNo9L-RegIta.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../assets/Fonts/NimbusRomNo9L-RegIta.svg#NimbusRomNo9L-RegIta') format('svg'); /* Legacy iOS */
   font-style: italic;
   font-weight: normal;
 }
 
 @font-face {
   font-weight: normal;
-  font-family: "icomoon";
+  font-family: 'icomoon';
   font-style: normal;
-  src: url("../assets/Fonts/icomoon.eot?azqktj");
-  src: url("../assets/Fonts/icomoon.eot?azqktj#iefix")
-      format("embedded-opentype"),
-    url("../assets/Fonts/icomoon.ttf?azqktj") format("truetype"),
-    url("../assets/Fonts/icomoon.woff?azqktj") format("woff"),
-    url("../assets/Fonts/icomoon.svg?azqktj#icomoon") format("svg");
+  src: url('../assets/Fonts/icomoon.eot?azqktj');
+  src: url('../assets/Fonts/icomoon.eot?azqktj#iefix') format('embedded-opentype'),
+    url('../assets/Fonts/icomoon.ttf?azqktj') format('truetype'),
+    url('../assets/Fonts/icomoon.woff?azqktj') format('woff'),
+    url('../assets/Fonts/icomoon.svg?azqktj#icomoon') format('svg');
 }
 
 :root {
- /* Set neon color */
+  /* Set neon color */
   --neon-text-color: #fff;
   --neon-border-color: #08f;
 }
 
 /* Animate neon flicker */
 @keyframes neonFlicker {
-    
-    0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
-      
-        text-shadow:
-            -0.02rem -0.02rem 0.1rem #fff,
-            0.02rem 0.02rem 0.1rem #fff,
-            0 0 0.01rem var(--neon-text-color),
-            0 0 0.02rem var(--neon-text-color),
-            0 0 0.03rem var(--neon-text-color),
-            0 0 0.04rem var(--neon-text-color),
-            0 0 0.05rem var(--neon-text-color);
-        
-        /*box-shadow:
+  0%,
+  19%,
+  21%,
+  23%,
+  25%,
+  54%,
+  56%,
+  100% {
+    text-shadow: -0.02rem -0.02rem 0.1rem #fff, 0.02rem 0.02rem 0.1rem #fff, 0 0 0.01rem var(--neon-text-color),
+      0 0 0.02rem var(--neon-text-color), 0 0 0.03rem var(--neon-text-color), 0 0 0.04rem var(--neon-text-color),
+      0 0 0.05rem var(--neon-text-color);
+
+    /*box-shadow:
             0 0 .05rem #fff,
             inset 0 0 .05rem #fff,
             0 0 0.2rem var(--neon-border-color),
             inset 0 0 0.2rem var(--neon-border-color),
             0 0 0.4rem var(--neon-border-color),
             inset 0 0 0.4rem var(--neon-border-color);        */
-    }
-    
-    10%, 24%, 55% {        
-        text-shadow: none;
-        /*box-shadow: none;*/
-    }    
+  }
+
+  10%,
+  24%,
+  55% {
+    text-shadow: none;
+    /*box-shadow: none;*/
+  }
 }
 
 html,
@@ -89,7 +81,7 @@ body {
   /*touch-action: none;
   overscroll-behavior: none;*/
 
-  font-family: "NimbusRomNo9L";
+  font-family: 'NimbusRomNo9L';
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -105,7 +97,7 @@ body {
 
 body::after {
   height: 100%;
-  content: " ";
+  content: ' ';
   display: block;
   position: absolute;
   top: 0;
@@ -119,19 +111,19 @@ body::after {
 }
 body::before {
   height: 100%;
-  content: " ";
+  content: ' ';
   display: block;
   position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  background: linear-gradient(rgba(18, 16, 16, 0) 30%, rgba(0, 0, 0, 0.25) 30%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
-  z-index: 0;
+  background: linear-gradient(rgba(18, 16, 16, 0) 30%, rgba(0, 0, 0, 0.25) 30%),
+    linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
+  z-index: 1;
   background-size: 100% 2px, 3px 100%;
   pointer-events: none;
 }
-
 
 a {
   /* text-decoration: none; */
@@ -238,7 +230,6 @@ h4 {
   }
 }
 
-
 #main {
   padding: 20px;
   margin: 0 auto;
@@ -255,8 +246,11 @@ h4 {
 #vignettes {
   content: '';
   position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
-  box-shadow: inset 0px 0px 150px rgba(0,0,0,0.9);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  box-shadow: inset 0px 0px 150px rgba(0, 0, 0, 0.9);
 }
 
 #visualisations {
@@ -269,7 +263,7 @@ h4 {
 }
 
 .heading-wrapper {
-  background: #1E2173;
+  background: #1e2173;
   box-sizing: border-box;
   border-bottom: 5px solid #000;
 }
@@ -292,7 +286,7 @@ h4 {
 #visualisations h2 {
   width: 80%;
   margin: 0 auto;
-  background: #F1F1F1;
+  background: #f1f1f1;
   color: black;
   font-size: 28px;
   padding: 5px;
@@ -300,7 +294,7 @@ h4 {
 
 #visualisations h3 {
   background: black;
-  color: #F1F1F1;
+  color: #f1f1f1;
   padding: 5px;
   margin: 0 auto;
   width: 60%;
@@ -312,7 +306,7 @@ h4 {
 
 #visualisations .map {
   flex: 70%;
-  background: #1E2173;
+  background: #1e2173;
   display: flex;
   flex-direction: column;
 }
@@ -321,21 +315,21 @@ h4 {
   flex-grow: 1;
   min-height: 800px;
   height: 100%;
+  z-index: 0;
 }
 
 #vis-player {
-  min-height:inherit;
+  min-height: inherit;
 }
 
 #visualisations .map video {
   width: 100%;
 }
 
-
 #visualisations .sevendays {
   flex: 30%;
   display: flex;
-  background: #6B7AE5;
+  background: #6b7ae5;
   flex-direction: column;
   box-sizing: border-box;
   border-left: 20px solid #000;
@@ -359,7 +353,7 @@ h4 {
 }
 
 .day.active {
-  background-color: #1E2173;
+  background-color: #1e2173;
 }
 
 .day .icon {
@@ -420,12 +414,12 @@ h4 {
 #legend {
   flex: 100%;
   font-family: 'Open Sans', sans-serif;
-  background: #1E2173;
+  background: #1e2173;
   padding: 0 10px 10px 0;
 }
 
 #legend h4 {
-  background: #F1F1F1;
+  background: #f1f1f1;
   color: black;
   font-size: 28px;
   padding: 5px;
@@ -437,7 +431,6 @@ h4 {
 }
 
 #legend ul {
-
 }
 
 #legend ul li {
@@ -449,7 +442,7 @@ h4 {
 #legend ul li .icon {
   width: 10px;
   height: 10px;
-  background: #FFF;
+  background: #fff;
   display: inline-block;
   margin: 0 5px 0;
 }
@@ -471,7 +464,8 @@ h4 {
     min-height: 400px;
   }
 
-  #visualisations .map, #visualisations .sevendays {
+  #visualisations .map,
+  #visualisations .sevendays {
     flex: 100%;
     /*height: 600px;*/
   }
@@ -486,7 +480,7 @@ h4 {
   }
 
   .day .icon {
-/*    width: 60px;
+    /*    width: 60px;
     height: 60px;
     background-size: 50px;*/
   }
@@ -568,6 +562,7 @@ h4 {
 #takeover {
   height: 100%;
   width: 100%;
+  z-index: 100;
 }
 
 #popup_content {
@@ -596,10 +591,14 @@ h4 {
 }
 
 @-webkit-keyframes rotateY {
-  to { -webkit-transform: rotateY(360deg); }
+  to {
+    -webkit-transform: translateZ(-1000px) rotateY(360deg);
+  }
 }
 @keyframes rotateY {
-  to { transform: rotateY(360deg); }
+  to {
+    transform: translateZ(-1000px) rotateY(360deg);
+  }
 }
 
 #info_btn {
@@ -725,11 +724,11 @@ h4 {
 }
 
 .slnsw-icon,
-[class^="slnsw-icon-"],
-[class*=" slnsw-icon-"] {
+[class^='slnsw-icon-'],
+[class*=' slnsw-icon-'] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-weight: normal;
-  font-family: "icomoon", sans-serif !important;
+  font-family: 'icomoon', sans-serif !important;
   speak: none;
   font-style: normal;
   font-variant: normal;
@@ -738,11 +737,11 @@ h4 {
   text-transform: none;
 
   /* Enable Ligatures ================ */
-  -webkit-font-feature-settings: "liga";
-  -moz-font-feature-settings: "liga=1";
-  -moz-font-feature-settings: "liga";
-  -ms-font-feature-settings: "liga" 1;
-  font-feature-settings: "liga";
+  -webkit-font-feature-settings: 'liga';
+  -moz-font-feature-settings: 'liga=1';
+  -moz-font-feature-settings: 'liga';
+  -ms-font-feature-settings: 'liga' 1;
+  font-feature-settings: 'liga';
   -webkit-font-variant-ligatures: discretionary-ligatures;
   font-variant-ligatures: discretionary-ligatures;
 
@@ -752,31 +751,31 @@ h4 {
 }
 
 .slnsw-icon-facebook::before {
-  content: "\e600";
+  content: '\e600';
 }
 
 .slnsw-icon-twitter::before {
-  content: "\e605";
+  content: '\e605';
 }
 
 .slnsw-icon-flickr::before {
-  content: "\e601";
+  content: '\e601';
 }
 
 .slnsw-icon-instagram::before {
-  content: "\e602";
+  content: '\e602';
 }
 
 .slnsw-icon-youtube::before {
-  content: "\e943";
+  content: '\e943';
 }
 
 .slnsw-icon-pinterest::before {
-  content: "\e603";
+  content: '\e603';
 }
 
 .slnsw-icon-rss::before {
-  content: "\e604";
+  content: '\e604';
 }
 
 .footer__social {
@@ -809,7 +808,7 @@ h4 {
     left: 0.35em;
     width: 2.5em;
     border-bottom: 1px solid white;
-    content: "";
+    content: '';
   }
 
   .footer__social::after {
@@ -818,7 +817,7 @@ h4 {
     right: 0.2em;
     height: 0.5em;
     border-right: 1px solid white;
-    content: "";
+    content: '';
   }
 }
 
@@ -847,12 +846,12 @@ ul.footer-menu {
 
   ul.footer-menu li::after {
     margin-left: 1em;
-    content: "/";
+    content: '/';
     margin-right: 1em;
   }
 
   ul.footer-menu li:last-child::after {
-    content: "";
+    content: '';
   }
 }
 
@@ -872,7 +871,7 @@ ul.footer-menu::after {
   left: -3em;
   width: 3em;
   border-top: 1px solid white;
-  content: "";
+  content: '';
   top: 6em;
   /* bottom: auto; */
 }
@@ -903,7 +902,7 @@ ul.footer-menu::after {
   bottom: -1em;
   height: 3.5em;
   border-right: 1px solid white;
-  content: "";
+  content: '';
   /*  width: 21px; /*  var(--spacing-lg); */
   /* border-right: none;
   border-bottom: none; */
@@ -933,12 +932,18 @@ ul.footer-menu::after {
   }
 }
 
-.vjs-tech { object-fit: cover; }
+.vjs-tech {
+  object-fit: cover;
+}
 
-.vjs-control-bar { font-size: 200% }
+.vjs-control-bar {
+  font-size: 200%;
+}
 
 @media (max-width: 800px) {
-  .vjs-control-bar { font-size: 100% }
+  .vjs-control-bar {
+    font-size: 100%;
+  }
 }
 
 .vjs-poster {
